feat(Problem5): create solution methd
큰 금액 화폐를 우선적으로 받는 solution method 생성